--- a/package.json
+++ b/package.json
@@ -10,35 +10,37 @@
   "main": "js/feedbackQueue.js",
   "license": "ISC",
   "dependencies": {
+    "browserify": "16.5.1",
     "domready": "^1.0.8",
-    "browserify": "11.2.0",
     "draggable": "^4.0.4",
     "extend": "^3.0.0",
+    "graceful-fs": "^4.2.4",
+    "minimatch": "^3.0.4",
     "mustache": "~2.2.1",
-    "stringify": "5.1.0"
+    "stringify": "5.2.0"
   },
   "devDependencies": {
     "autoprefixer": "6.0.3",
     "es6-promise": "^3.0.2",
-    "gulp": "3.9.0",
+    "gulp": "^4.*.*",
     "gulp-buffer": "0.0.2",
     "gulp-concat": "^2.6.0",
-    "gulp-cssmin": "^0.1.7",
-    "gulp-imagemin": "^2.4.0",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-jscs": "^3.0.2",
     "gulp-postcss": "^6.1.0",
     "gulp-tap": "^0.1.3",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "~3.0.7",
-    "imagemin-pngquant": "^4.2.2",
-    "mwyatt-codex": "2.4.0",
+    "gulp4-run-sequence": "^1.*.*",
+    "imagemin-pngquant": "^8.0.0",
+    "mwyatt-codex": "github:avdis/codex#cd1c4b8d63da4f44bed089400365be14b9be11a7",
     "postcss-color-function": "^2.0.0",
     "postcss-conditionals": "^2.0.1",
-    "postcss-csscomb": "0.0.0",
+    "postcss-csscomb": "1.0.2",
     "postcss-custom-properties": "^5.0.0",
     "postcss-hexrgba": "^0.2.0",
-    "postcss-import": "^7.0.0",
     "run-sequence": "^1.1.5",
-    "uglify-js": "^2.6.4"
+    "uglify-js": "^2.8.29"
   }
 }
